# PEA

./: CMakeLists.txt  main.cpp
data/PEA2/: solutions.txt  tsp_26.txt
inc/: AdjacencyMatrix.h
inc/algorithms/: Algorithm.h  BandB.h  BranchAndBound.h  BruteForce.h  DynamicProgramming.h  Genetic.h  SimulatedAnnealing.h  TabuSearch.h
inc/algorithms/utils/: GeneticHelper.h
inc/containers/: AdjacencyMatrix.h  DynamicArray.hpp  LiteDynamicArray.h  Member.h  Path.h
inc/utils/: Enums.h  FileManager.h  MatrixGenerator.h  Menu.h  RandomGenerator.cpp  RandomGenerator.h  TimeUnit.h  Timer.h
inc/utils/testing/: ErrorTests.h  MatrixGenerator.h  TSP1_tests.h  TSP2_tests.h  Tests.h  TimeTests.h  Timer.h
src/: AdjacencyMatrix.cpp  main.cpp
src/algorithms/: BandB.cpp  BranchAndBound.cpp  BruteForce.cpp  DynamicProgramming.cpp  Genetic.cpp  SimulatedAnnealing.cpp  TabuSearch.cpp
src/algorithms/utils/: GeneticHelper.cpp
src/containers/: AdjacencyMatrix.cpp  DynamicArray.tpp  LiteDynamicArray.tpp  Path.cpp
src/utils/: FileManager.cpp  MatrixGenerator.cpp  Menu.cpp  RandomGenerator.cpp  Timer.cpp
src/utils/testing/: ErrorTests.cpp  GeneticTests.cpp  GeneticTests.h  MatrixGenerator.cpp  TSP1_tests.cpp  TSP2_tests.cpp  Tests.cpp  TimeTests.cpp  Timer.cpp
